--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5433/lagoondata
-spring.datasource.username=postgres
-spring.datasource.password=pgdb8.4@CW
+spring.datasource.username=lagoon
+spring.datasource.password=lagoon
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
