--- a/pom.xml
+++ b/pom.xml
@@ -57,9 +57,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>postgresql</groupId>
+			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.4.1208-jdbc42-atlassian-hosted</version>
+			<version>9.4.1211</version>
 		</dependency>
 	</dependencies>
 
